--- a/RussianPostTracking/MainWindow.xaml
+++ b/RussianPostTracking/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="RussianPostTracking.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"
+        Title="Отслеживание почтовых отправлений"
         FontSize="18"
         Height="768"
         Width="1024"
